chore(css): add bootstrap as local file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>angular2-bootstrap JSPM Demo Application</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="bootstrap.min.css" />
   </head>
   <body>
     <div class="container">
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    
+
     <script src="fill-polyfill.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="demo.bundle.js"></script>
